; ModuleID = '/home/carl/AnghaBench/vlc/src/text/extr_url.c_vlc_UrlParseInner.c'
source_filename = "/home/carl/AnghaBench/vlc/src/text/extr_url.c_vlc_UrlParseInner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8*, i64, i8*, i8*, i8*, i8*, i32*, i32* }

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"+-.\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"/?\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"//\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"0123456789\00", align 1
@UINT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @vlc_UrlParseInner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_UrlParseInner(%struct.TYPE_3__* noalias %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i8* null, i8** %14, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i8* null, i8** %16, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 2
  store i8* null, i8** %18, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 8
  store i32* null, i32** %20, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 3
  store i64 0, i64* %22, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 4
  store i8* null, i8** %24, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 5
  store i8* null, i8** %26, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 6
  store i8* null, i8** %28, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 7
  store i8* null, i8** %30, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 9
  store i32* null, i32** %32, align 8
  %33 = load i8*, i8** %5, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %35, label %37

35:                                               ; preds = %2
  %36 = load i32, i32* @EINVAL, align 4
  store i32 %36, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %269

37:                                               ; preds = %2
  %38 = load i8*, i8** %5, align 8
  %39 = call i8* @vlc_iri2uri(i8* %38)
  store i8* %39, i8** %6, align 8
  %40 = load i8*, i8** %6, align 8
  %41 = icmp eq i8* %40, null
  %42 = zext i1 %41 to i32
  %43 = call i64 @unlikely(i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %37
  store i32 -1, i32* %3, align 4
  br label %269

46:                                               ; preds = %37
  %47 = load i8*, i8** %6, align 8
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 7
  store i8* %47, i8** %49, align 8
  %50 = load i8*, i8** %6, align 8
  store i8* %50, i8** %7, align 8
  store i32 0, i32* %9, align 4
  %51 = load i8*, i8** %6, align 8
  store i8* %51, i8** %8, align 8
  br label %52

52:                                               ; preds = %64, %46
  %53 = load i8*, i8** %8, align 8
  %54 = load i8, i8* %53, align 1
  %55 = call i64 @isurialnum(i8 signext %54)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %62, label %57

57:                                               ; preds = %52
  %58 = load i8*, i8** %8, align 8
  %59 = load i8, i8* %58, align 1
  %60 = call i32* @memchr(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8 signext %59, i32 3)
  %61 = icmp ne i32* %60, null
  br label %62

62:                                               ; preds = %57, %52
  %63 = phi i1 [ true, %52 ], [ %61, %57 ]
  br i1 %63, label %64, label %67

64:                                               ; preds = %62
  %65 = load i8*, i8** %8, align 8
  %66 = getelementptr inbounds i8, i8* %65, i32 1
  store i8* %66, i8** %8, align 8
  br label %52

67:                                               ; preds = %62
  %68 = load i8*, i8** %8, align 8
  %69 = load i8, i8* %68, align 1
  %70 = sext i8 %69 to i32
  %71 = icmp eq i32 %70, 58
  br i1 %71, label %72, label %79

72:                                               ; preds = %67
  %73 = load i8*, i8** %8, align 8
  %74 = getelementptr inbounds i8, i8* %73, i32 1
  store i8* %74, i8** %8, align 8
  store i8 0, i8* %73, align 1
  %75 = load i8*, i8** %7, align 8
  %76 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %77 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %76, i32 0, i32 0
  store i8* %75, i8** %77, align 8
  %78 = load i8*, i8** %8, align 8
  store i8* %78, i8** %7, align 8
  br label %79

79:                                               ; preds = %72, %67
  %80 = load i8*, i8** %7, align 8
  %81 = call i8* @strchr(i8* %80, i8 signext 35)
  store i8* %81, i8** %8, align 8
  %82 = load i8*, i8** %8, align 8
  %83 = icmp ne i8* %82, null
  br i1 %83, label %84, label %95

84:                                               ; preds = %79
  %85 = load i8*, i8** %8, align 8
  %86 = getelementptr inbounds i8, i8* %85, i32 1
  store i8* %86, i8** %8, align 8
  store i8 0, i8* %85, align 1
  %87 = load i8*, i8** %8, align 8
  %88 = call i64 @vlc_uri_component_validate(i8* %87, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %89 = icmp ne i64 %88, 0
  br i1 %89, label %90, label %94

90:                                               ; preds = %84
  %91 = load i8*, i8** %8, align 8
  %92 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %93 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %92, i32 0, i32 6
  store i8* %91, i8** %93, align 8
  br label %94

94:                                               ; preds = %90, %84
  br label %95

95:                                               ; preds = %94, %79
  %96 = load i8*, i8** %7, align 8
  %97 = call i8* @strchr(i8* %96, i8 signext 63)
  store i8* %97, i8** %8, align 8
  %98 = load i8*, i8** %8, align 8
  %99 = icmp ne i8* %98, null
  br i1 %99, label %100, label %106

100:                                              ; preds = %95
  %101 = load i8*, i8** %8, align 8
  %102 = getelementptr inbounds i8, i8* %101, i32 1
  store i8* %102, i8** %8, align 8
  store i8 0, i8* %101, align 1
  %103 = load i8*, i8** %8, align 8
  %104 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %105 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %104, i32 0, i32 5
  store i8* %103, i8** %105, align 8
  br label %106

106:                                              ; preds = %100, %95
  %107 = load i8*, i8** %7, align 8
  %108 = call i64 @strncmp(i8* %107, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 2)
  %109 = icmp eq i64 %108, 0
  br i1 %109, label %110, label %263

110:                                              ; preds = %106
  %111 = load i8*, i8** %7, align 8
  %112 = getelementptr inbounds i8, i8* %111, i64 2
  store i8* %112, i8** %7, align 8
  %113 = load i8*, i8** %7, align 8
  %114 = call i8* @strchr(i8* %113, i8 signext 47)
  store i8* %114, i8** %8, align 8
  %115 = load i8*, i8** %8, align 8
  %116 = icmp ne i8* %115, null
  br i1 %116, label %117, label %122

117:                                              ; preds = %110
  %118 = load i8*, i8** %8, align 8
  store i8 0, i8* %118, align 1
  %119 = load i8*, i8** %8, align 8
  %120 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %121 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %120, i32 0, i32 4
  store i8* %119, i8** %121, align 8
  br label %122

122:                                              ; preds = %117, %110
  %123 = load i8*, i8** %7, align 8
  %124 = call i8* @strrchr(i8* %123, i8 signext 64)
  store i8* %124, i8** %8, align 8
  %125 = load i8*, i8** %8, align 8
  %126 = icmp ne i8* %125, null
  br i1 %126, label %127, label %155

127:                                              ; preds = %122
  %128 = load i8*, i8** %8, align 8
  %129 = getelementptr inbounds i8, i8* %128, i32 1
  store i8* %129, i8** %8, align 8
  store i8 0, i8* %128, align 1
  %130 = load i8*, i8** %7, align 8
  %131 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %132 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %131, i32 0, i32 1
  store i8* %130, i8** %132, align 8
  %133 = load i8*, i8** %8, align 8
  store i8* %133, i8** %7, align 8
  %134 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %135 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %134, i32 0, i32 1
  %136 = load i8*, i8** %135, align 8
  %137 = call i8* @strchr(i8* %136, i8 signext 58)
  store i8* %137, i8** %8, align 8
  %138 = load i8*, i8** %8, align 8
  %139 = icmp ne i8* %138, null
  br i1 %139, label %140, label %150

140:                                              ; preds = %127
  %141 = load i8*, i8** %8, align 8
  %142 = getelementptr inbounds i8, i8* %141, i32 1
  store i8* %142, i8** %8, align 8
  store i8 0, i8* %141, align 1
  %143 = load i8*, i8** %8, align 8
  %144 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %145 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %144, i32 0, i32 2
  store i8* %143, i8** %145, align 8
  %146 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %147 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %146, i32 0, i32 2
  %148 = load i8*, i8** %147, align 8
  %149 = call i8* @vlc_uri_decode(i8* %148)
  br label %150

150:                                              ; preds = %140, %127
  %151 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %152 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %151, i32 0, i32 1
  %153 = load i8*, i8** %152, align 8
  %154 = call i8* @vlc_uri_decode(i8* %153)
  br label %155

155:                                              ; preds = %150, %122
  %156 = load i8*, i8** %7, align 8
  %157 = load i8, i8* %156, align 1
  %158 = sext i8 %157 to i32
  %159 = icmp eq i32 %158, 91
  br i1 %159, label %160, label %181

160:                                              ; preds = %155
  %161 = load i8*, i8** %7, align 8
  %162 = call i8* @strrchr(i8* %161, i8 signext 93)
  store i8* %162, i8** %8, align 8
  %163 = icmp ne i8* %162, null
  br i1 %163, label %164, label %181

164:                                              ; preds = %160
  %165 = load i8*, i8** %8, align 8
  %166 = getelementptr inbounds i8, i8* %165, i32 1
  store i8* %166, i8** %8, align 8
  store i8 0, i8* %165, align 1
  %167 = load i8*, i8** %7, align 8
  %168 = getelementptr inbounds i8, i8* %167, i64 1
  %169 = call i32* @strdup(i8* %168)
  %170 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %171 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %170, i32 0, i32 8
  store i32* %169, i32** %171, align 8
  %172 = load i8*, i8** %8, align 8
  %173 = load i8, i8* %172, align 1
  %174 = sext i8 %173 to i32
  %175 = icmp eq i32 %174, 58
  br i1 %175, label %176, label %179

176:                                              ; preds = %164
  %177 = load i8*, i8** %8, align 8
  %178 = getelementptr inbounds i8, i8* %177, i32 1
  store i8* %178, i8** %8, align 8
  br label %180

179:                                              ; preds = %164
  store i8* null, i8** %8, align 8
  br label %180

180:                                              ; preds = %179, %176
  br label %202

181:                                              ; preds = %160, %155
  %182 = load i8*, i8** %7, align 8
  %183 = call i8* @strchr(i8* %182, i8 signext 58)
  store i8* %183, i8** %8, align 8
  %184 = load i8*, i8** %8, align 8
  %185 = icmp ne i8* %184, null
  br i1 %185, label %186, label %189

186:                                              ; preds = %181
  %187 = load i8*, i8** %8, align 8
  %188 = getelementptr inbounds i8, i8* %187, i32 1
  store i8* %188, i8** %8, align 8
  store i8 0, i8* %187, align 1
  br label %189

189:                                              ; preds = %186, %181
  %190 = load i8*, i8** %7, align 8
  %191 = call i8* @vlc_uri_decode(i8* %190)
  store i8* %191, i8** %10, align 8
  %192 = load i8*, i8** %10, align 8
  %193 = icmp ne i8* %192, null
  br i1 %193, label %194, label %197

194:                                              ; preds = %189
  %195 = load i8*, i8** %10, align 8
  %196 = call i32* @vlc_idna_to_ascii(i8* %195)
  br label %198

197:                                              ; preds = %189
  br label %198

198:                                              ; preds = %197, %194
  %199 = phi i32* [ %196, %194 ], [ null, %197 ]
  %200 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %201 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %200, i32 0, i32 8
  store i32* %199, i32** %201, align 8
  br label %202

202:                                              ; preds = %198, %180
  %203 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %204 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %203, i32 0, i32 8
  %205 = load i32*, i32** %204, align 8
  %206 = icmp eq i32* %205, null
  br i1 %206, label %207, label %208

207:                                              ; preds = %202
  store i32 -1, i32* %9, align 4
  br label %223

208:                                              ; preds = %202
  %209 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %210 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %209, i32 0, i32 8
  %211 = load i32*, i32** %210, align 8
  %212 = call i32 @vlc_uri_host_validate(i32* %211)
  %213 = icmp ne i32 %212, 0
  br i1 %213, label %222, label %214

214:                                              ; preds = %208
  %215 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %216 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %215, i32 0, i32 8
  %217 = load i32*, i32** %216, align 8
  %218 = call i32 @free(i32* %217)
  %219 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %220 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %219, i32 0, i32 8
  store i32* null, i32** %220, align 8
  %221 = load i32, i32* @EINVAL, align 4
  store i32 %221, i32* @errno, align 4
  store i32 -1, i32* %9, align 4
  br label %222

222:                                              ; preds = %214, %208
  br label %223

223:                                              ; preds = %222, %207
  %224 = load i8*, i8** %8, align 8
  %225 = icmp ne i8* %224, null
  br i1 %225, label %226, label %253

226:                                              ; preds = %223
  %227 = load i8*, i8** %8, align 8
  %228 = load i8, i8* %227, align 1
  %229 = sext i8 %228 to i32
  %230 = icmp ne i32 %229, 0
  br i1 %230, label %231, label %253

231:                                              ; preds = %226
  %232 = load i8*, i8** %8, align 8
  %233 = call i64 @strtoul(i8* %232, i8** %11, i32 10)
  store i64 %233, i64* %12, align 8
  %234 = load i8*, i8** %8, align 8
  %235 = load i8, i8* %234, align 1
  %236 = call i8* @strchr(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i8 signext %235)
  %237 = icmp eq i8* %236, null
  br i1 %237, label %247, label %238

238:                                              ; preds = %231
  %239 = load i8*, i8** %11, align 8
  %240 = load i8, i8* %239, align 1
  %241 = sext i8 %240 to i32
  %242 = icmp ne i32 %241, 0
  br i1 %242, label %247, label %243

243:                                              ; preds = %238
  %244 = load i64, i64* %12, align 8
  %245 = load i64, i64* @UINT_MAX, align 8
  %246 = icmp ugt i64 %244, %245
  br i1 %246, label %247, label %249

247:                                              ; preds = %243, %238, %231
  %248 = load i32, i32* @EINVAL, align 4
  store i32 %248, i32* @errno, align 4
  store i32 -1, i32* %9, align 4
  br label %249

249:                                              ; preds = %247, %243
  %250 = load i64, i64* %12, align 8
  %251 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %252 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %251, i32 0, i32 3
  store i64 %250, i64* %252, align 8
  br label %253

253:                                              ; preds = %249, %226, %223
  %254 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %255 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %254, i32 0, i32 4
  %256 = load i8*, i8** %255, align 8
  %257 = icmp ne i8* %256, null
  br i1 %257, label %258, label %262

258:                                              ; preds = %253
  %259 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %260 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %259, i32 0, i32 4
  %261 = load i8*, i8** %260, align 8
  store i8 47, i8* %261, align 1
  br label %262

262:                                              ; preds = %258, %253
  br label %267

263:                                              ; preds = %106
  %264 = load i8*, i8** %7, align 8
  %265 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %266 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %265, i32 0, i32 4
  store i8* %264, i8** %266, align 8
  br label %267

267:                                              ; preds = %263, %262
  %268 = load i32, i32* %9, align 4
  store i32 %268, i32* %3, align 4
  br label %269

269:                                              ; preds = %267, %45, %35
  %270 = load i32, i32* %3, align 4
  ret i32 %270
}

declare dso_local i8* @vlc_iri2uri(i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @isurialnum(i8 signext) #1

declare dso_local i32* @memchr(i8*, i8 signext, i32) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i64 @vlc_uri_component_validate(i8*, i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i8* @vlc_uri_decode(i8*) #1

declare dso_local i32* @strdup(i8*) #1

declare dso_local i32* @vlc_idna_to_ascii(i8*) #1

declare dso_local i32 @vlc_uri_host_validate(i32*) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i64 @strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
